Add "compile-testing" lib for IT